syntax = "proto3";

package order.v1;

option go_package = "github.com/alfredchaos/demo/api/order/v1;orderv1";

// BookService 图书服务定义
// 注意: 虽然包名是order,但实际实现的是book-service
service BookService {
  // GetBook 获取图书信息
  rpc GetBook(BookRequest) returns (BookResponse) {}
}

// BookRequest 图书请求
message BookRequest {
  // 可以添加请求参数,这里暂时为空
}

// BookResponse 图书响应
message BookResponse {
  // message 返回的消息内容
  string message = 1;
}
